Fixing posts list height, and removing side colums for small screens

--- a/src/components/posts-list/posts-list.styles.css
+++ b/src/components/posts-list/posts-list.styles.css
@@ -4,7 +4,8 @@
   flex-direction: column;
   background: #fff;  
   max-width: 100%;
-  height: auto;      
+  height: auto;   
+  min-height: 800px;   
   overflow: hidden;
   text-decoration: none;
   color: #000;  
